--- a/install.sh.example
+++ b/install.sh.example
@@ -6,7 +6,7 @@
 ########## Variables
 dir=/path/to/dotfile # dotfiles directory
 olddir=/path/to/dotfile # old dotfiles backup directory
-files="zshrc tmux hyper"    # list of files/folders to symlink in
+files="zshrc zshrc.d tmux hyper.js" # list of files/folders to symlink in
 ##########
 
 # Install oh-my-zsh
@@ -15,6 +15,12 @@ if [ -d "$ZSH" ]; then
 else
   e_header "Installing Oh My Zsh..."
   curl -L http://install.ohmyz.sh | sh
+  
+  # Download zsh-syntax-highlighting
+  git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
+
+  # Download zsh-autosuggestions
+  git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions
 fi
 
 # Install Homebrew
@@ -30,7 +36,7 @@ echo "Creating $olddir for backup of any existing dotfiles in ~"
 mkdir -p $olddir
 echo "...done"
 
-# change to the dotfiles directory
+# Change to the dotfiles directory
 echo "Changing to the $dir directory"
 cd $dir
 echo "...done"
