--- a/install.sh.example
+++ b/install.sh.example
@@ -6,7 +6,7 @@
 ########## Variables
 dir=/path/to/dotfile # dotfiles directory
 olddir=/path/to/dotfile # old dotfiles backup directory
-files="zshrc zshrc.d tmux.conf hyper.js" # list of files/folders to symlink in
+files="zshrc zshrc.d secrets.d tmux.conf hyper.js" # list of files/folders to symlink in
 ##########
 
 # Install oh-my-zsh
