--- a/tmux.conf
+++ b/tmux.conf
@@ -1,88 +1,26 @@
-# General
-set -g default-terminal "screen-256color"
-set -g history-limit 50000
-# set -g default-command /usr/local/bin/bash
+# Set true color
+set-option -sa terminal-overrides ",xterm*:Tc"
 
-# Use vim keybindings in copy mode
-# setw -g mode-keys vi
-set -g status-keys vi
-set -g mode-keys vi
-set -g xterm-keys on
-unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+set -g history-limit 10000
+# set-option -g history-unique on
+
+# Mouse support
+set -g mouse on
+
+# Start window numbering at 1
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+# Clear history
 unbind C-k
 bind -n C-k send-keys -R \; clear-history \; send-keys "Enter"
 
-# Setup 'v' to begin selection as in Vim
-bind -Tcopy-mode-vi 'v' send -X begin-selection
-bind -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'macchiato' 
 
-# Update default binding of `Enter` to also use copy-pipe
-unbind -Tcopy-mode-vi enter
-bind -Tcopy-mode-vi enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Mouse options
-set-option -g mouse on
-
-# Start numbering windows and panes at 1
-set -g base-index 1
-set -g pane-base-index 1
-set -g renumber-windows on
-
-# Highlight status bar on activity
-set -g monitor-activity on
-set -g visual-activity on
-
-# Titles (window number, program name, active (or not)
-set -g set-titles on
-set -g set-titles-string '#S.#W.#P'
-
-# Automatically set window title
-set -g automatic-rename
-
-# Status line
-set -g status-right "%I:%M%p"
-
-
-#### COLOUR (Solarized 256)
-#### https://github.com/darcyparker/tmux-colors-solarized/blob/updateOptionsRemovedFromTmux/tmuxcolors-256.conf
-
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-
-# pane number display
-set -g display-panes-active-colour colour33 #blue
-set -g display-panes-colour colour166 #orange
-# default window title colors
-set-window-option -g window-status-style fg=colour244 #base0
-set-window-option -g window-status-style bg=default
-#set-window-option -g window-status-style dim
-
-# Powerline
-# source "/Users/frago/.pyenv/versions/3.7.0/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
-# active window title colors
-set-window-option -g window-status-current-style fg=colour166 #orange
-set-window-option -g window-status-current-style bg=default
-#set-window-option -g window-status-current-style bright
-
-# pane border
-set-option -g pane-border-style fg=colour237
-set-option -g pane-active-border-style fg=colour208
-
-# message text
-set-option -g message-style bg=colour235 #base02
-set-option -g message-style fg=colour166 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
-
-# bell
-set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
-
-# Powerline
-# source "/Users/frago/.pyenv/versions/3.7.0/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
+run '~/.tmux/plugins/tpm/tpm'
