update tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,9 @@
-# Set true color
+# General
 set-option -sa terminal-overrides ",xterm*:Tc"
-
 set -g history-limit 10000
-# set-option -g history-unique on
+
+# Set all panes the same size in vertical position
+bind -n C-r select-layout even-vertical
 
 # Mouse support
 set -g mouse on
