--- a/tmux.conf
+++ b/tmux.conf
@@ -25,3 +25,6 @@ set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'macchiato' 
 
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
