--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,12 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+# Copy text:
+# 1. Enter copy mode: ctrl + b + [
+# 2. Select the text and hold
+# 2. option + w
+bind -T copy-mode M-w send -X copy-pipe "reattach-to-user-namespace pbcopy" \; display-message "copied to system clipboard"
+
 # Clear history
 unbind C-k
 bind -n C-k send-keys -R \; clear-history \; send-keys "Enter"
@@ -22,6 +28,6 @@ bind -n C-k send-keys -R \; clear-history \; send-keys "Enter"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavour 'macchiato' 
+set -g @catppuccin_flavour 'macchiato'
 
 run '~/.tmux/plugins/tpm/tpm'
