update claude setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 .DS_Store
 install.sh
 secrets.d/
+
+claude/cache
+claude/debug
+claude/downloads
+claude/file-history
+claude/plans
+claude/plugins
+claude/projects
+claude/statsig
+claude/todos
+claude/history.jsonl
