--- a/install.sh.example
+++ b/install.sh.example
@@ -6,7 +6,7 @@
 ########## Variables
 dir=/path/to/dotfile # dotfiles directory
 olddir=/path/to/dotfile_old # old dotfiles backup directory
-files="zshrc zshrc.d secrets.d tmux.conf tmux hyper.js" # list of files/folders to symlink in
+files="zshrc zshrc.d secrets.d bin claude tmux.conf tmux hyper.js" # list of files/folders to symlink in
 ##########
 
 # Install Homebrew
@@ -34,3 +34,7 @@ for file in $files; do
     echo "Creating symlink to $file in home directory."
     ln -s $dir/$file ~/.$file
 done
+
+# Install Claude marketplaces
+claude  plugin marketplace add https://github.com/anthropics/claude-plugins-official
+claude  plugin marketplace add https://github.com/EveryInc/compound-engineering-plugin
